<resources>
    <string name="app_name">Calculatrice</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="sex">6</string>
    <string name="seven">7</string>
    <string name="height">8</string>
    <string name="nine">9</string>
    <string name="clear">C</string>
    <string name="parenthesis">()</string>
    <string name="percentage">%</string>
    <string name="division">/</string>
    <string name="mul">X</string>
    <string name="sous">-</string>
    <string name="add">+</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="desc">Delete icon</string>

</resources>