<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="15dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/output"
        android:layout_marginBottom="15dp"
        android:padding="15dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center_vertical"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/white"
        android:layout_marginBottom="10dp"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="4"
        android:rowCount="5"
        >
        <!--row 1-->
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/clear"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="10dp"
            android:backgroundTint="@color/darkRed"
            android:onClick="clear"
            />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="10dp"
            android:src="@mipmap/delete_icon_round"
            android:contentDescription="@string/desc"
            android:onClick="delete"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/percentage"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="10dp"
            android:onClick="percentage"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_column="3"
            android:text="@string/division"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="10dp"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:onClick="getOperation"
            />

        <!--row 2-->
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/seven"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="10dp"
            android:onClick="getNumber"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/height"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="10dp"
            android:onClick="getNumber"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/nine"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="10dp"
            android:onClick="getNumber"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_column="3"
            android:text="@string/mul"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="10dp"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:onClick="getOperation"
            />

        <!--row 3-->
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/four"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="10dp"
            android:onClick="getNumber"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/five"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="10dp"
            android:onClick="getNumber"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/sex"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="10dp"
            android:onClick="getNumber"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_column="3"
            android:text="@string/sous"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="10dp"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:onClick="getOperation"
            />

        <!--row 4-->
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/one"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="10dp"
            android:onClick="getNumber"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/two"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="10dp"
            android:onClick="getNumber"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_column="2"
            android:text="@string/three"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="10dp"
            android:onClick="getNumber"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_column="3"
            android:text="@string/add"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="10dp"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:onClick="getOperation"
            />
        <!--row 5-->
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/zero"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="10dp"
            android:onClick="getNumber"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="4"
            android:layout_column="1"
            android:text="@string/dot"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="10dp"
            android:onClick="dot"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="4"
            android:layout_column="2"
            android:text="@string/equal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:padding="10dp"
            android:backgroundTint="@color/lightGreen"
            android:onClick="equal"
            />

    </GridLayout>

</LinearLayout>